# Smitty-Services

./: .dockerignore  .gitignore  CMakeLists.txt  DESIGN_DECISIONS.md  DEVELOPMENT_LOG.md  README.md  SERVICE_CENTER_GUIDE.md  docker-compose.yml
database/: PATCH_FILE_001.sql  PATCH_FILE_002.sql  schema.sql  seed_data.sql
docker/: Dockerfile.frontend
docs/: DESIGN_DECISIONS.md  DEVELOPMENT_LOG.md  Smitty_Services_Proposal.md  USERS_GUIDE.md
include/: ApiClient.h  AppSettings.h  Auth.h  CustomerStatementReport.h  Dashboard.h  Entity.h  EntityDetailView.h  EntityListView.h  EntityRegistry.h  Footer.h  NavBar.h  OrderReport.h  PdfReport.h  RevenueReport.h  SettingsView.h  SideBar.h  SmittyApplication.h
model/: app_model.yaml
resources/css/: smitty.css
scripts/: env.sh  start.sh
src/: ApiClient.cpp  AppSettings.cpp  Auth.cpp  CustomerDetail.cpp  CustomerList.cpp  CustomerStatementReport.cpp  Dashboard.cpp  Entity.cpp  EntityDetailView.cpp  EntityListView.cpp  EntityRegistry.cpp  Footer.cpp  JobDetail.cpp  JobList.cpp  NavBar.cpp  OrderDetail.cpp  OrderList.cpp  OrderReport.cpp  PdfReport.cpp  ProductDetail.cpp  ProductList.cpp  PurchaseDetail.cpp  PurchaseList.cpp  RevenueReport.cpp  Settings.cpp  SideBar.cpp  SmittyApplication.cpp  VehicleDetail.cpp  VehicleList.cpp  main.cpp
